feat(snapshot): add tse snapshot every 30 seconds, add tse to stock detail
